src/manipulator/snapshots/annatto__manipulator__filter__tests__fail_deserialization_with_bad_query.snap
---
source: src/manipulator/filter.rs
expression: filter_nodes.err().unwrap()
---
TOML parse error at line 1, column 9
  |
1 | query = "annis:tok @* doc"
  |         ^^^^^^^^^^^^^^^^^^
Error with query:
[0:7-0:9] Unexpected token in query. Expected one of: ID
